fixed excess line breaks inside pre elements

--- a/style/partials/_general.scss
+++ b/style/partials/_general.scss
@@ -64,3 +64,7 @@ a {
   color: black;
   margin-bottom: 0;
 }
+
+pre *{
+  display: inline;
+}
